--- a/app/templates/exo_edit_content.html
+++ b/app/templates/exo_edit_content.html
@@ -139,24 +139,6 @@
   <div class="span12"><br><br><br></div>
 </div>
 
-<script>
-function cleanLatex(strOutput)
-{
-    strOutput = strOutput.replace(/\\begin\{enumerate\}/g, '<ol>');
-    strOutput = strOutput.replace(/\\end\{enumerate\}/g, '<\/ol>');
-    strOutput = strOutput.replace(/\\begin\{itemize\}/g, '<ul>');
-    strOutput = strOutput.replace(/\\end\{itemize\}/g, '<\/ul>');
-    strOutput = strOutput.replace(/\\item\s*\[([^\]]*)\]/g, '<br>$1&nbsp;');
-    strOutput = strOutput.replace(/\\item/g, '\r\n<li>');
-    strOutput = strOutput.replace(/(\\begin{array}(?:[^\\]+|\\(?!end{array}))*\\end{array})|(\\begin{cases}(?:[^\\]+|\\(?!end{cases}))*\\end{cases})|\\\\/g, function(match) {
-       if (match.length < 3)
-            return "<br>" // Le regex cherche les \begin{array} \end{array}, et les \\. Il suffit alors de filter les array.
-       else
-            return match; // return the argument, that is, don't replace
-  }); 
-      return strOutput
-}
-</script>
 
 
 <div class="row">
@@ -165,7 +147,7 @@ function cleanLatex(strOutput)
 
   	<div class="hero-unit" id="question">
       <h2>Enoncé <a type="button" class="btn btn-mini btn-danger" data-toggle="collapse" data-target="#edit_enonce"><i class="icon-pencil"></i></a></h2>
-  		<p class="math">{{exo_data.question.decode('utf8')}}</p>
+  		<div class="math">{{exo_data.question_html.decode('utf8') |safe}}</div> 
       <div id="edit_enonce" class="collapse"> 
         <hr>
         <form action="" method="post" name="edit">
@@ -180,7 +162,7 @@ function cleanLatex(strOutput)
 
   	<div class="hero-unit" id="hint">
       <h2>Indice <a type="button" class="btn btn-mini btn-danger" data-toggle="collapse" data-target="#edit_hint"><i class="icon-pencil"></i></a></h2>
-      <p class="math">{{exo_data.hint.decode('utf8')}}</p>
+      <div class="math">{{exo_data.hint.decode('utf8') |safe}}</div> 
       <div id="edit_hint" class="collapse"> 
         <hr>
         <form action="" method="post" name="edit">
@@ -195,7 +177,7 @@ function cleanLatex(strOutput)
 
   	<div class="hero-unit" id="solution">
       <h2>Correction  <a type="button" class="btn btn-mini btn-danger" data-toggle="collapse" data-target="#edit_solution"><i class="icon-pencil"></i></a></h2>
-      <p class="math">{{exo_data.solution.decode('utf8')}}</p>
+      <div class="math">{{exo_data.solution_html.decode('utf8') |safe}}</div>
       <div id="edit_solution" class="collapse"> 
         <hr>
         <form action="" method="post" name="edit">
