--- a/app/templates/exo_edit_content.html
+++ b/app/templates/exo_edit_content.html
@@ -223,7 +223,8 @@ $(function () {
                 title: {
                     text: 'Count'
                 },
-                min: -1
+                min: -0.5,
+                minRange: 4
             },
             tooltip: {
                 formatter: function() {
