--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,7 +51,7 @@
             {% for message in messages %}
               <div class="alert alert-info">
                   <button type="button" class="close" data-dismiss="alert">×</button>
-                  <strong>Succes !</strong> L'exercice a bien été ajouté à la base !
+                  {{message}}
               </div>
               <br>
             {% endfor %}
