--- a/app/templates/exo_edit_new.html
+++ b/app/templates/exo_edit_new.html
@@ -51,7 +51,7 @@
     <div class="control-group ">
       <label class="control-label">Id:</label>
       <div class="controls">
-        <input class="input-xlarge" id="disabledInput" type="text" placeholder={{new_id}} disabled>
+        <input class="input-xlarge" id="disabledInput" type="text" placeholder='automatique' disabled>
       </div>
     </div>
     
@@ -61,18 +61,18 @@
 
 
 <h2>Thème</h2>
-    {{form_field(form.track)}}
-    {{form_field(form.category)}}
+    {{form_field(form.tracks)}}
+    {{form_field(form.part)}}
     {{form_field(form.chapter)}}
     <div class="control-group ">
       <label class="control-label">Numéro:</label>
       <div class="controls">
-        <input class="input-xlarge" id="disabledInput" type="text" placeholder="Le numero sera donné automatiquement" disabled>
+        <input class="input-xlarge" id="disabledInput" type="text" placeholder="automatique" disabled>
       </div>
     </div>
 
     {{form_field(form.difficulty)}}
-    {{form_field(form.taglist)}}
+    {{form_field(form.tags)}}
 
 <h2>Contenu</h2>
     {{form_field(form.question, class="input-block-level", rows="10")}}
