--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,10 +46,10 @@
 
     <div class="container">
 
-      {% with messages = get_flashed_messages() %}
+      {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-            {% for message in messages %}
-              <div class="alert alert-info">
+            {% for category, message in messages %}
+              <div class="alert alert-{{category}}">
                   <button type="button" class="close" data-dismiss="alert">×</button>
                   {{message}}
               </div>
