--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,9 @@
 <div class="row">
   <div class="span6">
   		<h3>Operations</h3>
-		<p>Nombre d'exercices vus / utilisateur / semaine: {{operations_data.viewcount_peruser_perweek}}</p>
+        {% for figure in operations_data %}
+		      <p>{{figure.content}}: {{figure.number}}</p>
+        {% endfor %}
   </div>
 
   <div class="span6">
