--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,7 +65,7 @@
 
 <footer>
     <div class="container">
-        <p>Copiright edelans 2013</p>
+        <p>Copyright edelans 2013</p>
     </div>
 </footer>
 
