--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,23 +9,23 @@
 
 <div class="row-fluid">
   <div class="span3 smallstat box mobileHalf" ontablet="span6" ondesktop="span3">
-    <span class="title">Clients</span>
-    <span class="value">4 589</span>
+    <span class="title">Nb exos</span>
+    <span class="value">{{operations_data[0].number}}</span>
   </div>
 
   <div class="span3 smallstat box mobileHalf" ontablet="span6" ondesktop="span3">
-    <span class="title">Transactions</span>
-    <span class="value">789</span>
+    <span class="title">Nb vues /sem</span>
+    <span class="value">{{operations_data[5].number}}</span>
   </div>
 
   <div class="span3 smallstat box mobileHalf noMargin" ontablet="span6" ondesktop="span3">
     <span class="title">Income</span>
-    <span class="value">$1 999,99</span>
+    <span class="value">-</span>
   </div>
 
   <div class="span3 smallstat mobileHalf box" ontablet="span6" ondesktop="span3">
     <span class="title">Account</span>
-    <span class="value">$19 999,99</span>
+    <span class="value">-</span>
   </div>
 </div>
 
