ajout bouton generation json

--- a/app/templates/navigation/exercices_level0.html
+++ b/app/templates/navigation/exercices_level0.html
@@ -17,5 +17,9 @@
 
 <a class="btn btn-large btn-block btn-primary" href={{url_for('new_exo', exo_id=new_id)}}>Saisir un nouvel exercice</a>
 
+<br>
+
+<a class="btn btn-large btn-block btn-success" href={{url_for('generate_json')}}>Télécharger un json de la DB</a>
+
 {% endblock %}
 
