changements limite taille enonce et solution

--- a/app/templates/edition/exo_edit_new.html
+++ b/app/templates/edition/exo_edit_new.html
@@ -61,7 +61,7 @@
 
 
 <h2>Thème</h2>
-    {{form_field(form.tracks)}}
+    {{form_field(form.tracks, value="MP, PC, PSI")}}
     {{form_field(form.part)}}
     {{form_field(form.chapter)}}
     <div class="control-group ">
