--- a/app/templates/navigation/exercices_level0.html
+++ b/app/templates/navigation/exercices_level0.html
@@ -19,7 +19,7 @@
 
 <br>
 
-<a class="btn btn-large btn-block btn-success" href={{url_for('generate_json')}}>Télécharger un json de la DB</a>
+<a class="btn btn-large btn-block btn-success" href={{url_for('generate_json')}}>Télécharger un json de la DB pour l'appli</a>
 
 {% endblock %}
 
