epuration pour branch light-dev

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
   {% endif %}
 
   <link href="/static/css/bootstrap.css" rel="stylesheet" media="all">
-  <link href="/static/css/tablesorter.css" rel="stylesheet" media="all">
+  <link href="/static/css/tablesorter.css" rel="stylesheet" media="all">  <!-- http://tablesorter.com/docs/ -->
   <link href="/static/css/dashboard.css" rel="stylesheet" media="all">
   <link href="/static/css/math.css" rel="stylesheet" media="all">
   <script src="http://code.jquery.com/jquery-latest.js"></script>
